2009-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/changer.c: s/execve/execv

2009-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/changer.c: Pass command override to chg-glue.
	* changer-src/chg-glue.pl: Parse command override.

2009-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: Fix error reporting in find subcommand.

2009-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/amrecover.h: Change prototype.
	* recover-src/extract_list.c: merge_path, abort if cd_* failed.
	* recover-src/set_commands.c: Many functions return 0 or 1.

2009-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsuntar.pl: Fix redirection in validate command.

2009-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amcheck.8.xml, man/xml-source/amfetchdump.8.xml,
	  man/xml-source/amflush.8.xml,
	  man/xml-source/amrestore.8.xml: Fix order of -o argument.
	* restore-src/amfetchdump.c, restore-src/amrestore.c,
	  server-src/amcheck.c,
	  server-src/amflush.c: Fix order of -o argument in usage function.

2009-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.8.xml: Document [...] and [!...] in host & disk
				       expression section.

2009-04-28  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/ampgsql.pl: remove checks for PG-DATADIR

2009-04-27  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/ampgsql.pl: lowercase property names when accessing them

2009-04-27  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/ampgsql.pl: fix debug printing of property names,
	  add parent directory checks to selfcheck command,
	  check psql binary path, fix whitespace
	* perl/Amanda/Application.swg: update usage docs
	* installcheck/Installcheck/Application.pm: fix formatting tags
	  remove 'level' argument from selfcheck command
	* installcheck/ampgsql.pl: test selfcheck command a bit

2009-04-27  Jean-Louis Martineau <martineau@zmanda.com>